@@ -1,3 +1,8 @@
+2009-04-20  Glenn Randers-Pehrson <glennrp@simple....>
+
+	* coders/png.c: Refrain from modifying image struct
+          members (matte, colors, depth) while writing a PNG.
+
 2009-04-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* doc/options.imdoc: Document the direction of rotation.
